--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ l.parentNode.insertBefore(s, l);
 <body class="text-slate-200 min-h-screen font-sans">
 
     <nav class="p-6 max-w-6xl mx-auto flex justify-between items-center">
-        <a href="index.html" class="flex items-center gap-2 text-slate-400 hover:text-white transition group">
+        <a href="https://zatts11.github.io/mini-tienda/" class="flex items-center gap-2 text-slate-400 hover:text-white transition group">
             <span class="group-hover:-translate-x-1 transition-transform">←</span> Volver al Hub
         </a>
         <div class="text-xs font-mono tracking-widest text-slate-500 uppercase">Build v2026.02</div>
@@ -74,5 +74,6 @@ l.parentNode.insertBefore(s, l);
     </footer>
 
 </body>
+
 
 </html>
